# DZ_31

./: db.sqlite3  manage.py  pyproject.toml
ads/: apps.py  models.py  permissins.py  serializers.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_selection.py  0003_rename_author_selection_owner.py  0004_category_slug_alter_ad_name.py  0005_alter_category_slug.py  0006_alter_ad_description.py
ads/urls/: Ad.py  Cat.py  Selection.py
data/: csv_to_json.py
dz_27/: settings.py  urls.py
tests/: factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selections/: selection_create_test.py
users/: models.py  serializers.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_managers_user_date_joined_user_email_and_more.py  0004_alter_user_age.py  0005_alter_user_role.py  0006_user_birth_date_alter_user_email.py  0007_alter_user_birth_date.py
users/urls/: loc.py  user.py
